--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     
   <properties>
     <database.driver>com.mysql.jdbc.Driver</database.driver>
-    <database.url>jdbc:mysql://localhost:3306/rupp_test?autoReconnect=true</database.url>
+    <database.url>jdbc:mysql://localhost:3306/kidsdiary?autoReconnect=true</database.url>
     <database.username>root</database.username>
     <database.password>12354</database.password>
     
